<resources>
    <string name="add">Add</string>
    <string name="ShopList">ShopList !</string>
    <string name="app_name">SplashScreenTest</string>
    <string name="wlcm_msg">Welcome on EldApp !\nWhat do you want to do ?</string>
    <string name="act1_shoplist">ShopList</string>
    <string name="act2_setAppointment">Set an Appointment</string>
    <string name="SL_Prod">Add a product</string>
    <string name="SL_Qty">Add a quantity</string>
    <string name="NewContact">New Contact</string>
    <string name="AddContact">Add Contact :</string>
    <string name="Directory">Directory</string>
</resources>
