<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbackground"
    tools:context=".ShopList">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/toolbarSL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:title="@string/act1_shoplist" />

    <ImageButton
        android:id="@+id/CallButton"
        android:layout_width="56dp"
        android:layout_height="54dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@color/toolbarSL"
        android:src="@drawable/ic_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="12dp"
        android:background="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/AddText"
                android:layout_width="262dp"
                android:layout_height="wrap_content"
                android:hint="@string/SL_Prod"
                android:inputType="text" />

            <EditText
                android:id="@+id/AddQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/SL_Qty"
                android:inputType="text" />
        </LinearLayout>


        <ImageButton
            android:id="@+id/AddButton"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:layout_margin="10dp"
            android:background="@drawable/buttonshape"
            android:src="@drawable/ic_add_shopping_cart" />
    </LinearLayout>


    <ListView
        android:id="@+id/ShopList"
        android:layout_width="wrap_content"
        android:layout_height="239dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="123dp"
        android:layout_alignParentLeft="true" />

    <ImageButton
        android:id="@+id/DeleteButton"
        android:layout_width="300dp"
        android:layout_height="37dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="29dp"
        android:layout_marginLeft="42dp"
        android:layout_marginStart="42dp"
        android:background="@drawable/buttonshape"
        android:src="@drawable/ic_delete_forever"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




</RelativeLayout>